first widget full equip

--- a/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
@@ -76,3 +76,16 @@
 
   }
 }
+
+#modal-edit-item{
+
+  .field-col{
+    height: calc(100vh - 250px);
+    overflow-y: scroll;
+  }
+
+  .settings-col{
+    height: calc(100vh - 250px);
+    overflow-y: scroll;
+  }
+}
