--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16629,6 +16629,16 @@ nav.main-nav ul li.active a {
   padding: 20px 20px 20px 30px;
 }
 
+#modal-edit-item .field-col {
+  height: calc(100vh - 250px);
+  overflow-y: scroll;
+}
+
+#modal-edit-item .settings-col {
+  height: calc(100vh - 250px);
+  overflow-y: scroll;
+}
+
 body.dragging,
 body.dragging {
   cursor: move !important;
