--- a/Modules/Turisme/Resources/assets/sass/app.scss
+++ b/Modules/Turisme/Resources/assets/sass/app.scss
@@ -9,7 +9,7 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
-@import "~font-awesome/scss/font-awesome";
+//@import "~font-awesome/scss/font-awesome";
 
 @import 'helpers/init';
 @import 'helpers/common';
