--- a/public/modules/turisme/css/app.css
+++ b/public/modules/turisme/css/app.css
@@ -9924,3 +9924,12 @@ body {
   min-height: 100%;
 }
 
+.map-container .leaflet-container {
+  height: 300px;
+  width: 100%;
+}
+
+.map-container .leaflet-control-container {
+  z-index: 400;
+}
+
