--- a/Modules/Architect/Resources/assets/sass/architect/_grid-page.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_grid-page.scss
@@ -32,6 +32,7 @@
     border: 1px solid #ccc;
     margin-bottom: 20px;
     cursor: pointer;
+    height: 105px;
 
     &:hover{
       color:$brand-primary;
