--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -14698,6 +14698,7 @@ nav.main-nav ul li.active a {
   border: 1px solid #ccc;
   margin-bottom: 20px;
   cursor: pointer;
+  height: 105px;
 }
 
 .grid-items .grid-item:hover {
