file and typologies

--- a/Modules/Architect/Resources/assets/sass/architect/_medias.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_medias.scss
@@ -408,3 +408,34 @@
     }
   }
 }
+
+
+
+.file-field{
+
+  .pdf-preview{
+    border:1px solid #ccc;
+    text-align: center;
+    width:130px;
+    height:100px;
+    padding:15px;
+    margin:0 auto;
+    margin-top:20px;
+
+    i.fa{
+      font-size: 50px;
+      line-height: 60px;
+      color:#b4b4b4;
+    }
+  }
+
+  ul{
+    padding-top:20px;
+    padding-left:20px;
+    text-align: left;
+    li{
+      list-style-type: none;
+    }
+  }
+
+}
