--- a/Modules/Architect/Resources/assets/sass/architect/content/_page-builder.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_page-builder.scss
@@ -207,6 +207,9 @@
       }
 
       .row-container-body-bottom{
+
+        min-height:15px;
+
         a.btn.btn-link{
             padding: 0;
             color:#acacac;
