--- a/Modules/Architect/Resources/assets/sass/architect/_grid-page.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_grid-page.scss
@@ -34,6 +34,9 @@
     cursor: pointer;
     height: 105px;
 
+
+
+
     &:hover{
       color:$brand-primary;
       -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
@@ -51,6 +54,27 @@
       padding:0;
       margin:0;
     }
+
+    &.with-image{
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-bottom:40px;
+      height: 140px;
+
+      p.grid-item-name{
+        position: absolute;
+        bottom: -27px;
+        text-align: center;
+        width: 100%;
+        left: 0px;
+        height: 20px;
+        overflow: hidden;
+
+      }
+
+    }
+
 
   }
 
