--- a/Modules/Architect/Resources/assets/sass/architect/content/_page-builder.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_page-builder.scss
@@ -5,6 +5,12 @@
 
   .empty-item{
     border:1px dashed #ccc;
+    
+    a.btn.btn-link {
+      padding: 12px 0px;
+
+    }
+
   }
 
   .page-row {
