file with translation

--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -36,5 +36,6 @@
 @import 'content/content';
 @import 'content/page-builder';
 @import 'content/widgets';
+@import 'content/fields';
 
 @import 'sortable';
