--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16692,6 +16692,15 @@ nav.main-nav ul li.active a {
   overflow-y: scroll;
 }
 
+.translated-file {
+  display: inline-block;
+  padding: 10px;
+}
+
+.translated-file a.btn.btn-link {
+  padding: 12px 0px;
+}
+
 body.dragging,
 body.dragging {
   cursor: move !important;
