title and fixes

--- a/Modules/Architect/Resources/assets/sass/architect/_modal.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_modal.scss
@@ -160,6 +160,10 @@
     .form-group{
       padding-left: 53px;
     }
+
+    &.input-translated .form-group{
+      padding-left: 0px;
+    }
   }
 
   &.no-buttons {
