--- a/public/modules/turisme/css/app.css
+++ b/public/modules/turisme/css/app.css
@@ -9344,7 +9344,8 @@ img {
 }
 
 .rounded,
-.btn {
+.btn,
+.custom-modal .modal-buttons .close-button-modal {
   border-radius: 200px;
 }
 
@@ -9779,7 +9780,8 @@ b {
 }
 
 .rounded,
-.btn {
+.btn,
+.custom-modal .modal-buttons .close-button-modal {
   border-radius: 200px;
 }
 
@@ -9933,6 +9935,138 @@ article.page-builder{
   overflow: hidden;
 }
 */
+
+.custom-modal {
+  display: none;
+  opacity: 0;
+  z-index: 0;
+}
+
+.custom-modal .modal-background {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 560;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.68);
+}
+
+.custom-modal .modal-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 600;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  overflow-x: auto;
+  padding: 40px 10vw;
+  background-color: transparent;
+}
+
+.custom-modal .modal-content {
+  position: relative;
+  z-index: 600;
+  width: auto;
+  height: auto;
+  border: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 0px;
+}
+
+.custom-modal .modal-buttons {
+  display: inline-block;
+  position: absolute;
+  z-index: 650;
+  top: 10px;
+  right: 10px;
+}
+
+.custom-modal .modal-buttons .close-button-modal {
+  opacity: 0.5;
+  color: #000;
+  width: 30px;
+  height: 30px;
+  line-height: 23px;
+  font-size: 20px;
+  text-align: center;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  text-decoration: none;
+}
+
+.custom-modal .modal-buttons .close-button-modal:hover {
+  text-decoration: none;
+}
+
+@media (min-width: 52.85714286em) {
+  .custom-modal .modal-buttons .close-button-modal {
+    width: 47px;
+    height: 47px;
+    line-height: 38px;
+    font-size: 30px;
+  }
+}
+
+.custom-modal .row {
+  position: relative;
+  margin: 0;
+  bottom: auto;
+  padding: 0;
+  margin-right: 0px;
+  width: 100%;
+  background-color: #fff;
+}
+
+.custom-modal h2 {
+  padding-bottom: 20px;
+}
+
+form.contact-form {
+  padding-top: 40px;
+  padding-bottom: 60px;
+  border: none;
+  text-align: left;
+}
+
+form.contact-form h2 {
+  text-align: center;
+}
+
+form.contact-form input[type="text"] {
+  padding: 0 15px;
+}
+
+form.contact-form input.error,
+form.contact-form select.error {
+  border: 1px solid #c54345;
+}
+
+form.contact-form label.error {
+  color: #c54345;
+}
+
+form.contact-form label.error a {
+  color: #c54345;
+}
+
+form.contact-form .error-message {
+  border: 1px solid #c54345;
+  padding: 10px 20px;
+  color: #c54345;
+  margin-bottom: 20px;
+}
+
+form.contact-form .checkbox {
+  text-align: left;
+}
 
 .map-container .leaflet-container {
   height: 300px;
