--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16705,6 +16705,35 @@ nav.main-nav ul li.active a {
   padding: 12px 0px;
 }
 
+.menu .grid-items a {
+  display: inline-block;
+}
+
+.menu.page-builder .page-row {
+  width: 50vw;
+  margin-top: 10px;
+  padding: 0;
+  min-height: auto;
+}
+
+.menu p.loading-message {
+  border: 1px dashed #ccc;
+  text-align: center;
+  width: 50vw;
+  padding: 10px;
+  margin-left: 15px;
+}
+
+#modal-edit-menu .settings-col {
+  height: calc(100vh - 250px);
+  overflow-y: scroll;
+}
+
+#modal-edit-menu .field-col {
+  height: calc(100vh - 250px);
+  overflow-y: scroll;
+}
+
 body.dragging,
 body.dragging {
   cursor: move !important;
