--- a/public/modules/turisme/css/app.css
+++ b/public/modules/turisme/css/app.css
@@ -10029,6 +10029,29 @@ article.page-builder{
   padding-bottom: 20px;
 }
 
+#modal-thanks.custom-modal .modal-container {
+  padding: 40px 20vw;
+}
+
+#modal-thanks h2 {
+  font-size: 50px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  font-weight: 100;
+  padding-bottom: 0px;
+}
+
+#modal-thanks p.links {
+  border-top: 1px solid #e5e5e5;
+  margin-top: 50px;
+  padding-top: 20px;
+  margin-bottom: 40px;
+}
+
+#modal-thanks p.links a {
+  color: #9a9a9a;
+}
+
 form.contact-form {
   padding-top: 40px;
   padding-bottom: 60px;
@@ -10066,6 +10089,20 @@ form.contact-form .error-message {
 
 form.contact-form .checkbox {
   text-align: left;
+}
+
+.summary-list ul li {
+  list-style-type: none;
+}
+
+.summary-list .summary-item ul li {
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.summary-list .summary-item img {
+  width: 100px;
+  height: auto;
 }
 
 .map-container .leaflet-container {
