--- a/Modules/Turisme/Resources/assets/sass/_form.scss
+++ b/Modules/Turisme/Resources/assets/sass/_form.scss
@@ -35,3 +35,26 @@ form.contact-form {
     text-align: left;
   }
 }
+
+.summary-list{
+
+  ul{
+    li{
+      list-style-type: none;
+    }
+  }
+
+  .summary-item {
+    ul {
+      li{
+        display: inline-block;
+        padding-right: 10px;
+      }
+    }
+
+    img {
+      width:100px;
+      height:auto;
+    }
+  }
+}
