--- a/public/modules/turisme/css/app.css
+++ b/public/modules/turisme/css/app.css
@@ -10045,7 +10045,7 @@ article.page-builder{
   border-top: 1px solid #e5e5e5;
   margin-top: 50px;
   padding-top: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 40px !important;
 }
 
 #modal-thanks p.links a {
@@ -10059,6 +10059,14 @@ form.contact-form {
   text-align: left;
 }
 
+form.contact-form .form-group {
+  min-height: 38px;
+}
+
+form.contact-form .react-datepicker-wrapper {
+  width: 100%;
+}
+
 form.contact-form h2 {
   text-align: center;
 }
@@ -10068,7 +10076,8 @@ form.contact-form input[type="text"] {
 }
 
 form.contact-form input.error,
-form.contact-form select.error {
+form.contact-form select.error,
+form.contact-form textarea.error {
   border: 1px solid #c54345;
 }
 
@@ -10103,6 +10112,11 @@ form.contact-form .checkbox {
 .summary-list .summary-item img {
   width: 100px;
   height: auto;
+}
+
+.banner.newsletter form {
+  position: relative !important;
+  margin-top: 10px;
 }
 
 .map-container .leaflet-container {
