--- a/Modules/Turisme/Resources/assets/sass/_modal.scss
+++ b/Modules/Turisme/Resources/assets/sass/_modal.scss
@@ -115,7 +115,7 @@
     border-top: 1px solid rgba(229,229,229,1.00);
     margin-top: 50px;
     padding-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 40px !important;
 
 
     a {
