--- a/Modules/Turisme/Resources/assets/sass/widgets/_filter-bar.scss
+++ b/Modules/Turisme/Resources/assets/sass/widgets/_filter-bar.scss
@@ -7,6 +7,13 @@
       margin-right:2%;
     }
 
+    select{
+      display: inline-block;
+      width:15%;
+      float:left;
+      margin-right:2%;
+    }
+
     .input-date{
       display: inline-block;
       width:auto;
