--- a/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
@@ -10,6 +10,15 @@
       padding-left: 30px;
     }
 
+    .field-image{
+      width: 44px;
+      height: 44px;
+      background-position: center;
+      background-size: cover;
+      position: relative;
+      left: 8px;
+      float:left;
+    }
 
     button.btn,div.btn{
 
