--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -14298,6 +14298,11 @@ section#content .body {
   right: 40px;
 }
 
+#logo-wrapper img {
+  width: 100%;
+  max-width: 287px;
+}
+
 aside.sidebar {
   width: 0;
   position: fixed;
