--- a/Modules/Architect/Resources/assets/sass/architect/content/_fields.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_fields.scss
@@ -7,3 +7,20 @@
   }
 
 }
+
+.key-value-field {
+  &.row {
+    margin-left:12px;
+    margin-right:12px;
+  }
+
+  .col {
+    padding-left:7px;
+    padding-right:7px;
+  }
+
+  .remove-field-btn{
+    line-height: 32px;
+  }
+
+}
