--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -15003,6 +15003,7 @@ nav.main-nav ul li.active a {
 
 .leftbar-page .page-content {
   padding-top: 20px;
+  padding-bottom: 60px;
 }
 
 .leftbar-page .page-content h3 {
