--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -32,6 +32,7 @@
 @import 'datatable';
 @import 'form';
 @import 'map';
+@import 'dashboard';
 
 @import 'content/content';
 @import 'content/page-builder';
