--- a/Modules/Architect/Resources/assets/sass/architect/_datatable.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/_datatable.scss
@@ -23,6 +23,11 @@
     margin-bottom:0px;
   }
 
+  a.title{
+    color:$text-color;
+    font-weight: 100;
+  }
+
 }
 
 .table > thead > tr > th, .table > thead > tr > td, .table > tbody > tr > th, .table > tbody > tr > td, .table > tfoot > tr > th, .table > tfoot > tr > td{
