--- a/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/content/_widgets.scss
@@ -96,5 +96,11 @@
   .settings-col{
     height: calc(100vh - 250px);
     overflow-y: scroll;
+
+    &.disabled {
+      opacity:0.4;
+      pointer-events: none !important;
+    }
+
   }
 }
