--- a/Modules/Turisme/Resources/assets/sass/_form.scss
+++ b/Modules/Turisme/Resources/assets/sass/_form.scss
@@ -71,3 +71,7 @@ form.contact-form {
   position: relative !important;
   margin-top:10px;
 }
+
+.date-delivery {
+  margin-top : 30px !important;
+}
